display.html modified

--- a/display.html
+++ b/display.html
@@ -17,9 +17,9 @@
 			<br><br>
 
 			<p>
-				<a href="file:///C:/Users/82102/Desktop/그래픽스/Boxy-Run-master_1106/gameAlone.html">Alone</a>
+				<a href="gameAlone.html">Alone</a>
 				&nbsp;&nbsp;
-				<a href= "file:///C:/Users/82102/Desktop/그래픽스/Boxy-Run-master_1106/gameTogether.html">Together</a>
+				<a href= "gameTogether.html">Together</a>
 			</p>
 
 		</div>
