화면 분할 수정

--- a/gameTogether.html
+++ b/gameTogether.html
@@ -37,6 +37,34 @@
 			<div class="animate-flicker" id="variable-content">Press enter to begin</div>
 		</div>
 		<div id="world"></div>
+		<div class="panel2">
+			<div class="game-title2">
+				<div class="title2">RUNGETHER</div>
+			</div>
+			<div class="stat">
+				<label>Score</label>
+				<p id="score2">0</p>
+			</div>
+			<table id="controls2">
+			  	<tr>
+			    	<td>Up:</td>
+			    	<td>Jump</td>
+			  	</tr>
+			  	<tr>
+			    	<td>Left:</td>
+			    	<td>Left lane switch</td>
+			  	</tr>
+			  	<tr>
+			    	<td>Right:</td>
+			    	<td>Right lane switch</td>
+			  	</tr>
+			  	<tr>
+			    	<td>p:</td>
+			    	<td>Pause</td>
+			  	</tr>
+			</table>
+			<table id="ranks2"></table>
+			<div class="animate-flicker" id="variable-content2">Press enter to begin</div>
 		</div>
 	</body>
 </html>
