--- a/display.html
+++ b/display.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="js/three.min.js"></script>
     <script type="text/javascript" src="js/GLTFLoader.js"></script>
     <script type="text/javascript" src="js/OrbitControls.js"></script>
-    <script type="text/javascript" src="js/gameAlone.js"></script>
+    <script type="text/javascript" src="js/display.js"></script>
     <link href="style.css" rel="stylesheet">
 </head>
 <style>
