--- a/gameAlone.html
+++ b/gameAlone.html
@@ -19,7 +19,7 @@
 
             <audio autoplay
                    loop
-                   src="audio/chasing-victory-main-9448.mp3"
+                   src="audio/main.mp3"
                    type="audio/mpeg"></audio>
 
 			<div class="game-title">
